# AI-Medical-Assistant-

./: app.py  pyproject.toml  requirements.txt  seed_admin.py  streamlit_app.py  vercel.json
api/: index.py
scratch/: reset_admin.py
src/: helper.py
static/css/: auth.css  style.css
static/js/: ecg.js  script.js
templates/: admin.html  forgot_password.html  index.html  login.html  register.html  reset_password.html  verify_otp.html
