[project]
name = "medical-ai-assistant"
version = "0.1.0"
description = "A Medical AI Assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "flask==3.1.1",
    "flask-cors",
    "sentence-transformers==4.1.0",
    "pypdf==5.6.1",
    "python-dotenv==1.1.0",
    "langchain-pinecone",
    "langchain-openai",
    "langchain-groq",
    "langchain-community"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
